# ml-full-workflow-for-credit-card

./: .gitignore  ML Wrokflow Design.txt  README.md  pyproject.toml  requirements.txt  run.sh
.github/workflows/: ci.yaml
configs/: data_generation.yaml  features.yaml  packaging.yaml  training.yaml  validation.yaml
docker/: Dockerfile  docker-compose.yaml
docs/: model_card.md  monitoring_report.json
models/v1.0/: feature_pipeline.joblib  feature_schema.json  metadata.json  model.joblib
pipelines/: run_pipeline.py
src/: __init__.py
src/api/: __init__.py  app.py  schemas.py
src/api/templates/: index.html
src/data_generation/: __init__.py  generator.py
src/explainability/: __init__.py  shap_explainer.py
src/features/: __init__.py  pipeline.py  transformers.py
src/monitoring/: __init__.py  drift.py
src/packaging/: __init__.py  bundler.py
src/training/: __init__.py  metrics.py  trainer.py
src/validation/: __init__.py  splitter.py
tests/: conftest.py  test_api.py  test_data_generation.py  test_features.py  test_monitoring.py  test_training.py  test_validation.py
