[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "yogyank-scoring"
version = "0.1.0"
description = "Production-grade rural credit scoring ML pipeline"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {text = "MIT"}

dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "pyyaml>=6.0",
    "xgboost>=2.0",
    "lightgbm>=4.1",
    "optuna>=3.4",
    "mlflow>=2.9",
    "shap>=0.43",
    "fastapi>=0.104",
    "uvicorn>=0.24",
    "pydantic>=2.5",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "httpx>=0.25",
    "ruff>=0.1",
]

[project.scripts]
yogyank = "pipelines.run_pipeline:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "pipelines*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
